--- a/www/Style.css
+++ b/www/Style.css
@@ -37,6 +37,8 @@ body{
     justify-content: center;
     color: black;
     width: 100%;
+    font-family: 'Poppins', sans-serif;
+
 
 }
 
@@ -92,14 +94,20 @@ body{
 
 
 h1{
-     top: 20px;
-     align-content: center;
-     text-transform: uppercase;
-     font-family: 'Poppins', sans-serif;;
-     color: 450deg, #8e2de2, #4a00e0;
-     margin: auto;
-     
- }
+    display: inline;
+    top: 40px;
+    align-items: center;
+    margin-left: 50px;
+    text-transform: uppercase;
+    font-family: 'Poppins', sans-serif;
+    color: 450deg, #8e2de2, #4a00e0;
+
+
+    
+
+}
+
+    
 
  .list{ 
     position: absolute; 
